// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card renders large box shadow 1`] = `
.c0 {
  box-shadow: 0 0 4px 0 rgba(0,0,0,0.08),0 8px 8px 0 rgba(0,0,0,0.08),0 16px 16px 0 rgba(0,0,0,0.08);
}

<div
  className="c0 "
/>
`;

exports[`Card renders medium box shadow 1`] = `
.c0 {
  box-shadow: 0 0 4px 0 rgba(0,0,0,0.08),0 8px 8px 0 rgba(0,0,0,0.08);
}

<div
  className="c0 "
/>
`;

exports[`Card renders small box shadow 1`] = `
.c0 {
  box-shadow: 0 0 4px 0 rgba(0,0,0,0.08);
}

<div
  className="c0 "
/>
`;

exports[`Card renders xlarge box shadow 1`] = `
.c0 {
  box-shadow: 0 0 4px 0 rgba(0,0,0,0.08),0 8px 8px 0 rgba(0,0,0,0.08),0 16px 16px 0 rgba(0,0,0,0.08),0 32px 32px 0 rgba(0,0,0,0.08);
}

<div
  className="c0 "
/>
`;
